completed game and gameschedule use cases
