# Backend/src/main/java/com/example/frogcrew/game/controller/GameController.java
@@ -1,47 +1,44 @@
 package com.example.frogcrew.game.controller;
 
-import com.example.frogcrew.game.converter.GameScheduleDtoToGameSchedule;
-import com.example.frogcrew.game.dto.GameRequest.GameRequestDto;
 import com.example.frogcrew.game.dto.GameResponse.GameResponseDto;
-import com.example.frogcrew.game.dto.GameScheduleRequest.GameScheduleDto;
-import com.example.frogcrew.game.dto.GameScheduleResponse.GameScheduleResponse;
 import com.example.frogcrew.game.model.Game;
-import com.example.frogcrew.game.model.GameSchedule;
-import com.example.frogcrew.game.service.GameScheduleService;
+import com.example.frogcrew.game.service.GameService;
 import com.example.frogcrew.system.Result;
-import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
 
 @RestController
-@RequestMapping("${api.base-path}/gameSchedule")
+@RequestMapping("${api.base-path}/games")
 public class GameController {
+    private final GameService gameService;
 
-    private final GameScheduleService gameScheduleService;
-    private final GameScheduleDtoToGameSchedule gameScheduleDtoToGameSchedule;
-
-    public GameController(GameScheduleService gameScheduleService, GameScheduleDtoToGameSchedule gameScheduleDtoToGameSchedule) {
-        this.gameScheduleService = gameScheduleService;
-        this.gameScheduleDtoToGameSchedule = gameScheduleDtoToGameSchedule;
-    }
-    @PostMapping
-    public Result createGameSchedule(@Valid @RequestBody GameScheduleDto gameScheduleDTO){
-        GameSchedule gameSchedule = this.gameScheduleDtoToGameSchedule.convert(gameScheduleDTO);
-        GameSchedule createdGameSchedule = this.gameScheduleService.createGameSchedule(gameSchedule);
-        GameScheduleResponse gameScheduleResponse = new GameScheduleResponse(createdGameSchedule.getScheduleId(), createdGameSchedule.getSport(), createdGameSchedule.getSeason());
-
-        return new Result(true, HttpStatus.OK.value(), "Add Success", gameScheduleResponse);
-
-    }
-    @PostMapping("/{scheduleId}/games")
-    public Result addGameToSchedule(@PathVariable Long scheduleId, @Valid @RequestBody GameRequestDto gameRequestDTO){
-        Game createdGame = this.gameScheduleService.addGame(scheduleId, gameRequestDTO);
-        GameResponseDto gameResponseDto = new GameResponseDto(createdGame.getGameId(), scheduleId,
-                createdGame.getGameDate(), createdGame.getVenue(), createdGame.getOpponent(), createdGame.getFinalized());
-        return new Result(true, HttpStatus.OK.value(), "Add Success", gameResponseDto);
-
-
+    public GameController(GameService gameService){
+        this.gameService = gameService;
     }
 
+    @GetMapping
+    public Result getGeneralGameSchedule(){
+        List<Game> games = this.gameService.findAllGames();
+        if(games.isEmpty()){
+            return new Result(true, HttpStatus.NO_CONTENT.value(), "No games found");
+        }
+        List<GameResponseDto> gameResponseDtos = games.stream()
+                .map(game -> new GameResponseDto(
+                        game.getGameId(),
+                        game.getSchedule().getScheduleId(),
+                        game.getGameDate(),
+                        game.getVenue(),
+                        game.getOpponent(),
+                        game.getFinalized()
+                ))
+                .toList();
+
+
+        return new Result(true, HttpStatus.OK.value(), "Find Success", gameResponseDtos);
+    }
 
 }
